--- a/ui-main/ui-server/.settings/org.eclipse.wst.common.component
+++ b/ui-main/ui-server/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="java-output-path" value="/ui-server/target/ui-server-0.0.1-SNAPSHOT/WEB-INF/classes"/>
-        <property name="context-root" value="/"/>
+        <property name="context-root" value="ui-server"/>
     </wb-module>
 </project-modules>
